<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fciencias.pdm20222.tarea3.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_comida_diaria"
        android:name="fciencias.pdm20222.tarea3.ui.gallery.ComidaDiariaFragment"
        android:label="@string/comida_diaria"
        tools:layout="@layout/comida_diaria_fragment" />

    <fragment
        android:id="@+id/nav_favorito"
        android:name="fciencias.pdm20222.tarea3.ui.slideshow.FavoritoFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_favorito" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="fciencias.pdm20222.tarea3.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />


</navigation>